tests/baselines/reference/FunctionPropertyAssignments5_es6.errors.txt
FunctionPropertyAssignments5_es6.ts(1,13): error TS2304: Cannot find name 'foo'.


==== FunctionPropertyAssignments5_es6.ts (1 errors) ====
    var v = { *[foo()]() { } }
                ~~~
!!! error TS2304: Cannot find name 'foo'.